--- a/index.html
+++ b/index.html
@@ -63,23 +63,28 @@
                 <div class="app-container">
                     <!-- カメラ読み取りセクション -->
                     <section class="camera-section">
-                        <h2>QRコード読み取り</h2>
-                        <div class="camera-container">
-                            <video ref="video" autoplay muted playsinline></video>
-                            <canvas ref="canvas" style="display: none;"></canvas>
-                            <div class="camera-overlay">
-                                <div class="scan-area"></div>
+                        <div class="section-header" @click="toggleCameraSection">
+                            <h2>QRコード読み取り</h2>
+                            <span class="toggle-icon">{{ showCameraSection ? '▼' : '▶' }}</span>
+                        </div>
+                        <div v-if="showCameraSection" class="section-content">
+                            <div class="camera-container">
+                                <video ref="video" autoplay muted playsinline></video>
+                                <canvas ref="canvas" style="display: none;"></canvas>
+                                <div class="camera-overlay">
+                                    <div class="scan-area"></div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="camera-controls">
-                            <button @click="startCamera" class="btn btn-primary" :disabled="isCameraActive">カメラ開始</button>
-                            <button @click="stopCamera" class="btn btn-secondary" :disabled="!isCameraActive">カメラ停止</button>
-                        </div>
-                        <div class="scan-result">
-                            <p>{{ scanStatus }}</p>
-                            <div v-if="scannedData" class="scanned-data">
-                                <h3>読み取り結果:</h3>
-                                <p>{{ scannedData }}</p>
+                            <div class="camera-controls">
+                                <button @click="startCamera" class="btn btn-primary" :disabled="isCameraActive">カメラ開始</button>
+                                <button @click="stopCamera" class="btn btn-secondary" :disabled="!isCameraActive">カメラ停止</button>
+                            </div>
+                            <div class="scan-result">
+                                <p>{{ scanStatus }}</p>
+                                <div v-if="scannedData" class="scanned-data">
+                                    <h3>読み取り結果:</h3>
+                                    <p>{{ scannedData }}</p>
+                                </div>
                             </div>
                         </div>
                     </section>
@@ -88,12 +93,15 @@
                     <section class="generator-section">
                         <h2>QRコード生成</h2>
                         <div class="input-container">
-                            <textarea v-model="qrInputText" placeholder="QRコードに変換したいテキストを入力してください..."></textarea>
-                            <button @click="generateQRCode" class="btn btn-primary">QRコード生成</button>
+                            <textarea v-model="qrInputText" placeholder="QRコードに変換したいテキストを入力してください..." @input="debouncedRegenerate"></textarea>
+                            <div class="input-buttons">
+                                <button @click="generateQRCode" class="btn btn-primary">QRコード生成</button>
+                                <button @click="addToWallet" class="btn btn-success">ウォレットに登録</button>
+                            </div>
                         </div>
 
                         <!-- QRコード生成オプション -->
-                        <div class="qr-options">
+                        <div v-if="showQRGenerator" class="qr-options">
                             <h3>生成オプション</h3>
                             <div class="options-grid">
                                 <div class="option-group">
@@ -139,21 +147,11 @@
                             </div>
                         </div>
 
-                        <div class="qr-display">
+                        <div v-if="showQRGenerator" class="qr-display">
                             <div ref="qrCode" class="qr-code-container"></div>
                             <div class="qr-controls">
                                 <button @click="downloadQR" class="btn btn-secondary" :disabled="!hasGeneratedQR">ダウンロード</button>
                                 <button @click="copyQR" class="btn btn-secondary" :disabled="!hasGeneratedQR">クリップボードにコピー</button>
-                            </div>
-                        </div>
-
-                        <!-- QRコード履歴セクション -->
-                        <div class="qr-history">
-                            <h3>保存</h3>
-                            <div class="history-controls">
-                                <button @click="saveToHistory" class="btn btn-primary" :disabled="!canSaveToHistory">履歴に保存</button>
-                                <button @click="clearHistory" class="btn btn-secondary">履歴をクリア</button>
-                                <button @click="shareHistory" class="btn btn-secondary" :disabled="qrHistory.length === 0">URLで共有</button>
                             </div>
                         </div>
                     </section>
