QRコード画像サイズを拡大し、フッターに商標表記を追加：デンソーウェーブの登録商標ガイドラインに準拠

--- a/index.html
+++ b/index.html
@@ -258,6 +258,10 @@
 
         <footer>
             <p>&copy; 2024 QR Wallet</p>
+            <div class="footer-trademark">
+                <p>※ QRコードは株式会社デンソーウェーブの登録商標です。</p>
+                <p>※ QR Code is a registered trademark of DENSO WAVE INCORPORATED.</p>
+            </div>
         </footer>
     </div>
 
