ウォレットページに控えめな追加機能ボタンを実装：ブックマーク追加と新しいウォレット作成

--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
                         Add QR code
                     </button>
                 </div>
+
+                <!-- 追加機能ボタン -->
+                <div class="additional-actions">
+                    <button @click="addBookmark" class="btn btn-subtle">
+                        <i class="fa-regular fa-bookmark"></i>
+                        ブックマーク追加
+                    </button>
+                    <button @click="createNewWallet" class="btn btn-subtle">
+                        <i class="fa-solid fa-plus"></i>
+                        新しいウォレット
+                    </button>
+                </div>
             </main>
         </div>
 
