--- a/index.html
+++ b/index.html
@@ -282,17 +282,13 @@
         </footer>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.1/build/qrcode.js"></script>
     <script src="app.js"></script>
     <script>
-        // 遅延読み込み用のスクリプト管理
+        // 遅延読み込み用のスクリプト管理（jsQRのみ）
         window.lazyScripts = {
             jsQR: {
                 url: 'https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js',
-                loaded: false,
-                promise: null
-            },
-            qrcode: {
-                url: 'https://cdn.jsdelivr.net/npm/qrcode@1.5.1/build/qrcode.js',
                 loaded: false,
                 promise: null
             }
